# 3-coloring-problem

./: .gitignore  .gitmodules  .ocamlformat  Makefile  README.md  _CoqProject  dune-project  edits  three_coloring_problem.opam
.github/workflows/: ci.yml
coq/: configure.sh  dune
lib/: Tree.ml  Tree.v  dune
src/: Environment.mli  Environment_mli.v  List.v  Option.v  Reduction.hs  Reduction.ml  Reduction.v  Tree.ml  config-environment.json  config.json  dune  list.ml  option.ml  patch_sources.sh
src-coq/: Reduction.h2ci  Reduction.v
src-hs/: Reduction.hs
src-ml/: Reduction.ml
test/: dune
theories/: 3-coloring-problem.code-workspace  ReductionSpec.v  TreeSpec.v  dune
web/: index.html
web/ocaml/: dune  export.ml  solver.ml
web/scripts/: graph.js  index.js  main.js  parseInput.js  solver.bc.js  textareaUpgrade.js
web/styles/: main.css  style.css
