(library
 (name reduction)
 (modes byte native)
 (wrapped true)
 (libraries base)
 (preprocess
  (pps ppx_let ppx_compare ppx_sexp_conv ppx_string_interpolation sedlex.ppx)))

(rule
 (targets Tree.v)
 (deps Tree.ml)
 (mode promote)
 (action
  (run %{bin:coq-of-ocaml} %{deps})))

(coq.theory
 (name Src)
 (flags -impredicative-set))
